# gbizinfo

./: .gitignore  README.md  context7.json  openapi.json  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
data/sources/: 000925835.xls
scripts/: generate_models.py  generate_municipality.py
src/gbizinfo/: __init__.py  _logging.py  _version.py  cache.py  client.py  config.py  errors.py  http.py  pagination.py  validation.py
src/gbizinfo/enums/: __init__.py  _municipality.py  business_item.py  corporate_type.py  ministry.py  patent.py  prefecture.py  region.py  source.py  workplace.py
src/gbizinfo/models/: __init__.py  _base.py  _generated.py  responses.py
tests/: conftest.py  test_cache.py  test_client.py  test_contract.py  test_enums.py  test_errors.py  test_http.py  test_models.py  test_pagination.py  test_validation.py
tests/fixtures/: hojin_detail_response.json  search_response.json  update_info_response.json
tests/fixtures/error_responses/: 400.json
