[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gbizinfo"
version = "0.1.0"
description = "gBizINFO REST API v2 client library for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "YoseiUshida", email = "146376339+youseiushida@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "anyio>=4.12.1",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
]

[project.urls]
Homepage = "https://github.com/youseiushida/gbizinfo"
Repository = "https://github.com/youseiushida/gbizinfo"

[tool.hatch.build.targets.wheel]
packages = ["src/gbizinfo"]

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.54.0",
    "mypy>=1.15.0",
    "pytest>=8.3.0",
    "pytest-anyio>=0.0.0",
    "respx>=0.22.0",
    "ruff>=0.9.0",
    "xlrd>=2.0.0",
]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TC"]

[tool.ruff.lint.per-file-ignores]
"src/gbizinfo/enums/patent.py" = ["E501"]
